2.5/_sources/generated/exportdb/torch.operator.rst.txt
torch.operator
==================
unsupported_operator
^^^^^^^^^^^^^^^^^^^^

.. note::

    Tags: :doc:`torch.operator <torch.operator>`

    Support Level: NOT_SUPPORTED_YET

Original source code:

.. code-block:: python

    # mypy: allow-untyped-defs
    import torch
    from torch._export.db.case import SupportLevel
    
    
    class TorchSymMin(torch.nn.Module):
        """
        torch.sym_min operator is not supported in export.
        """
    
        def forward(self, x):
            return x.sum() + torch.sym_min(x.size(0), 100)
    
    
    example_args = (torch.randn(3, 2),)
    tags = {"torch.operator"}
    support_level = SupportLevel.NOT_SUPPORTED_YET
    model = TorchSymMin()
    

    torch.export.export(model, example_args)

Result:

.. code-block::

    Unsupported: torch.* op returned non-Tensor int call_function <function sym_min at 0x7f99a2d4f040>
